--- a/Heimdall/app/src/main/res/layout/field2.xml
+++ b/Heimdall/app/src/main/res/layout/field2.xml
@@ -1,28 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:weightSum="1"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="400dp"
+    android:layout_width="200dp"
+    android:layout_gravity="center">
+    <item android:id="@+id/menu_save"
+        android:title="menu_save" />
+    <!-- menu group -->
+    <group android:id="@+id/group_delete">
+        <item android:id="@+id/menu_archive"
+            android:title="menu_archive" />
+        <item android:id="@+id/menu_delete"
+            android:title="menu_delete" />
+    </group>
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_margin="10dp"
-        android:layout_weight=".5"
-        android:background="#0000FF"
-        android:text="No Stocks Yet..."
-        android:textSize="30sp" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_margin="10dp"
-        android:layout_weight=".5"
-        android:background="#FF0000"
-        android:text="No Stocks Yet.."
-        android:textSize="30sp"
-        android:visibility="visible" />
-</TableRow>
+</menu>
