Fixed bug where not entering anything into textfields crashed app
I'm a fiend for simple 'if' statements.

--- a/Heimdall/app/src/main/res/layout/activity_main.xml
+++ b/Heimdall/app/src/main/res/layout/activity_main.xml
@@ -87,8 +87,8 @@
         android:background="#75FFFFFF"
         android:ems="10"
         android:gravity="center"
-        android:hint="Username"
-        android:inputType="textPersonName"
+        android:hint="Email Address"
+        android:inputType="textEmailAddress"
         android:textCursorDrawable="@android:color/darker_gray"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
