--- a/Heimdall/app/src/main/res/layout/activity_home.xml
+++ b/Heimdall/app/src/main/res/layout/activity_home.xml
@@ -59,7 +59,7 @@
         android:id="@+id/settingsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="settingsScreen"
+        android:onClick="onAddField"
         android:text="@string/settings"
         app:layout_constraintBottom_toBottomOf="@+id/cardInfoButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,19 +98,7 @@
             android:id="@+id/VerticalLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="10dp"
-                android:background="#D1D1D1"
-                android:gravity="center"
-                android:tag="none"
-                android:text="No Stocks Yet..."
-                android:textSize="24sp" />
-        </LinearLayout>
+            android:orientation="vertical"/>
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
