--- a/Heimdall/app/src/main/res/layout/activity_registration.xml
+++ b/Heimdall/app/src/main/res/layout/activity_registration.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="64dp"
         android:background="@android:drawable/editbox_dropdown_dark_frame"
         android:onClick="createUser"
-        android:text="Register!"
+        android:text="Register"
         android:textColor="#F8F8F8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
