--- a/Heimdall/app/src/main/res/layout/activity_main.xml
+++ b/Heimdall/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:shadowDx="1"
         android:shadowDy="1"
         android:shadowRadius="2"
-        android:text="Heimdall"
+        android:text="@string/app_name"
         android:textColor="#FFFFFF"
         android:textSize="46sp"
         app:fontFamily="@font/cinzel"
@@ -87,9 +87,8 @@
         android:background="#75FFFFFF"
         android:ems="10"
         android:gravity="center"
-        android:hint="Email Address"
+        android:hint="@string/em"
         android:inputType="textEmailAddress"
-        android:text="a@a.com"
         android:textCursorDrawable="@android:color/darker_gray"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,9 +103,8 @@
         android:background="#75FFFFFF"
         android:ems="10"
         android:gravity="center"
-        android:hint="Password"
+        android:hint="@string/pw"
         android:inputType="textPassword"
-        android:text="jacob12"
         android:textCursorDrawable="@android:color/darker_gray"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
