--- a/Heimdall/app/src/main/res/layout/activity_add_twitter.xml
+++ b/Heimdall/app/src/main/res/layout/activity_add_twitter.xml
@@ -15,57 +15,23 @@
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#25B624">
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:minHeight="?actionBarSize"
-                android:text="@string/pageTitle"
-                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
+            android:background="#364236">
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="toHome"
                 android:text="Back to Home" />
 
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#25B624"
-                app:tabIndicatorColor="#070A06">
-
-                <android.support.design.widget.TabItem
-                    android:id="@+id/Home"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="toHome"
-                    android:text="@string/home" />
-
-                <android.support.design.widget.TabItem
-                    android:id="@+id/recomend"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/recomend" />
-
-                <android.support.design.widget.TabItem
-                    android:id="@+id/addTwiter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="toAddTwitter"
-                    android:text="@string/twitterAdd" />
-
-                <android.support.design.widget.TabItem
-                    android:id="@+id/settings"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/settings" />
-            </android.support.design.widget.TabLayout>
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="43dp"
+                android:gravity="center"
+                android:minHeight="?actionBarSize"
+                android:text="@string/pageTitle"
+                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
 
         </android.support.design.widget.AppBarLayout>
 
