--- a/Heimdall/app/src/main/res/layout/activity_home.xml
+++ b/Heimdall/app/src/main/res/layout/activity_home.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="backScreen"
-        android:text="@string/sign_in"
+        android:text="@string/sign_out"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.256"
@@ -87,7 +87,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:layout_weight="1"
-        android:background="#303030"
+        android:background="#364236"
         android:scrollbars="none"
         app:layout_constraintBottom_toTopOf="@+id/homeToSignIn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -98,8 +98,7 @@
             android:id="@+id/VerticalLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="15dp" />
+            android:orientation="vertical" />
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
