--- a/Heimdall/app/src/main/res/layout/activity_recommendation.xml
+++ b/Heimdall/app/src/main/res/layout/activity_recommendation.xml
@@ -6,61 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".Recommendation">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#25B624">
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:minHeight="?actionBarSize"
-            android:text="@string/recomend"
-            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
-
-        <Button
-            android:id="@+id/button11"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="toHome"
-            android:text="Back to Home" />
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#25B624"
-            app:tabIndicatorColor="#070A06">
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/Home"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="toHome"
-                android:text="@string/home" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/recomend"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/recomend" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/addTwiter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/twitterAdd" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/settings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/settings" />
-        </android.support.design.widget.TabLayout>
-    </android.support.design.widget.AppBarLayout>
-
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
@@ -72,6 +17,27 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/button11"
+            android:layout_width="186dp"
+            android:layout_height="52dp"
+            android:background="#364236"
+            android:onClick="toHome"
+            android:text="Back to Home"
+            tools:layout_editor_absoluteX="227dp" />
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="230dp"
+            android:layout_height="52dp"
+            android:background="#364236"
+            android:gravity="center"
+            android:minHeight="?actionBarSize"
+            android:text="@string/recomend"
+            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+            app:layout_constraintEnd_toStartOf="@+id/button11"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/button"
