Registered accounts now add uid to users database to allow for watchlist compilation
Those words sounded fancy. Whenever someone registers we are now able to track their watchlist. Pip pip cheerio.

--- a/Heimdall/app/src/main/res/layout/activity_registration.xml
+++ b/Heimdall/app/src/main/res/layout/activity_registration.xml
@@ -54,6 +54,7 @@
         android:ems="10"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
+        android:text="c@c.com"
         android:textColorHighlight="#727272"
         android:textColorLink="#727272"
         android:textCursorDrawable="@android:color/darker_gray"
@@ -69,6 +70,7 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:text="jacob12"
         android:textColorHighlight="#727272"
         android:textColorLink="#727272"
         android:textCursorDrawable="@android:color/darker_gray"
