Small changes to login, register, and reset password screen design

--- a/Heimdall/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Heimdall/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFDDDDDD"
     tools:context=".ForgotPassword">
 
     <TextView
@@ -24,6 +25,7 @@
         android:id="@+id/resetToSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="96dp"
         android:onClick="backScreen"
         android:text="Back to Home"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,22 +37,31 @@
         android:id="@+id/PWRemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="132dp"
         android:ems="10"
+        android:hint="Email Address"
         android:inputType="textEmailAddress"
         android:onClick="resetPassword"
-        app:layout_constraintBottom_toTopOf="@+id/resetToSignIn"
+        android:textColorHighlight="#727272"
+        android:textColorLink="#727272"
+        android:textCursorDrawable="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <Button
         android:id="@+id/button12"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:background="@android:drawable/editbox_dropdown_dark_frame"
         android:onClick="resetPassword"
+        android:padding="10dp"
         android:text="Submit Request"
+        android:textColor="#F8F8F8"
         app:layout_constraintBottom_toTopOf="@+id/resetToSignIn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/PWRemail" />
+        app:layout_constraintTop_toBottomOf="@+id/PWRemail"
+        app:layout_constraintVertical_bias="0.32" />
 </android.support.constraint.ConstraintLayout>
