--- a/Heimdall/app/src/main/res/layout/activity_registration.xml
+++ b/Heimdall/app/src/main/res/layout/activity_registration.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DDDDDD"
     tools:context=".Registration">
 
     <Button
@@ -11,13 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="backScreen"
-        android:text="@string/home"
+        android:text="Back to Sign in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.871" />
+        app:layout_constraintTop_toBottomOf="@+id/regButton"
+        app:layout_constraintVertical_bias="0.22000003" />
 
     <TextView
         android:id="@+id/textView2"
@@ -50,11 +50,10 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="116dp"
         android:ems="10"
         android:hint="Email Address"
         android:inputType="textEmailAddress"
-        android:text="a@a.com"
         android:textColorHighlight="#727272"
         android:textColorLink="#727272"
         android:textCursorDrawable="@android:color/darker_gray"
@@ -70,11 +69,11 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:text="jacob12"
         android:textColorHighlight="#727272"
         android:textColorLink="#727272"
         android:textCursorDrawable="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
+
 </android.support.constraint.ConstraintLayout>
