Changed designs for home, add card, settings, field, and some others probably
We're just gonna keep on rollin'

--- a/Heimdall/app/src/main/res/layout/activity_main.xml
+++ b/Heimdall/app/src/main/res/layout/activity_main.xml
@@ -89,6 +89,7 @@
         android:gravity="center"
         android:hint="@string/em"
         android:inputType="textEmailAddress"
+        android:text="c@c.com"
         android:textCursorDrawable="@android:color/darker_gray"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +106,7 @@
         android:gravity="center"
         android:hint="@string/pw"
         android:inputType="textPassword"
+        android:text="jacob135"
         android:textCursorDrawable="@android:color/darker_gray"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
