--- a/Heimdall/app/src/main/res/layout/activity_company_info.xml
+++ b/Heimdall/app/src/main/res/layout/activity_company_info.xml
@@ -19,7 +19,7 @@
             android:gravity="center"
             android:text="Stock Name"
             android:textColor="#FCF9F9"
-            android:textSize="24sp"
+            android:textSize="32dp"
             app:fontFamily="@font/cinzel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +29,7 @@
             android:id="@+id/graph"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:background="#353535"
             android:text="graph"
             android:textColor="#FCF9F9"
@@ -41,8 +41,9 @@
             android:id="@+id/Info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:text="Stock price"
+            android:gravity="center"
             android:textSize="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +53,7 @@
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:onClick="toAddTwitter"
             android:text="Add Twitter for this Company"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,18 +72,33 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <ScrollView
+            android:id="@+id/scrollView2"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="110dp"
             android:background="#CCCCCC"
             app:layout_constraintBottom_toTopOf="@+id/button3"
             app:layout_constraintTop_toBottomOf="@+id/button4"
             tools:layout_editor_absoluteX="207dp">
 
             <LinearLayout
+                android:id="@+id/TwitterTerms"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
         </ScrollView>
+
+        <Button
+            android:id="@+id/cancelDelete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:text="cancel"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/button3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+            app:layout_constraintVertical_bias="1.0" />
 
     </android.support.constraint.ConstraintLayout>
 
