Integrated with Darbi's add twitter implementation

--- a/Heimdall/app/src/main/res/layout/activity_company_info.xml
+++ b/Heimdall/app/src/main/res/layout/activity_company_info.xml
@@ -42,8 +42,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="Stock price"
             android:gravity="center"
+            android:text="Stock price"
             android:textSize="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +89,7 @@
 
         <Button
             android:id="@+id/cancelDelete"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:text="cancel"
@@ -99,6 +99,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scrollView2"
             app:layout_constraintVertical_bias="1.0" />
+
+        <Button
+            android:id="@+id/cancelDelete2"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:onClick="removeStock"
+            android:text="unfollow"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/button3" />
 
     </android.support.constraint.ConstraintLayout>
 
