--- a/Heimdall/app/src/main/res/layout/activity_add_twitter.xml
+++ b/Heimdall/app/src/main/res/layout/activity_add_twitter.xml
@@ -6,69 +6,61 @@
     android:layout_height="match_parent"
     tools:context=".AddTwitter">
 
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/coordinatorLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".settings">
-
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#364236">
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="backScreen"
-                android:text="Back to Home" />
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="43dp"
-                android:gravity="center"
-                android:minHeight="?actionBarSize"
-                android:text="@string/pageTitle"
-                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
-
-        </android.support.design.widget.AppBarLayout>
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-    </android.support.design.widget.CoordinatorLayout>
-
     <TextView
-        android:id="@+id/userInstruct"
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="145dp"
-        android:text="@string/userDirect"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/textView8"
+        android:layout_width="0dp"
+        android:layout_height="75dp"
+        android:background="#353535"
+        android:gravity="center"
+        android:text="Add Stock to Watchlist"
+        android:textColor="#FCF9F9"
+        android:textSize="24sp"
+        app:fontFamily="@font/cinzel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/findAccount"
+        android:id="@+id/followStock2"
+        android:layout_width="177dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="116dp"
+        android:ems="10"
+        android:hint="Term to Add"
+        android:inputType="text"
+        android:textColorHighlight="#727272"
+        android:textColorLink="#727272"
+        android:textCursorDrawable="@android:color/darker_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <Button
+        android:id="@+id/addToWatchlist2"
+        android:layout_width="150dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="64dp"
+        android:alpha="1"
+        android:background="@android:drawable/editbox_dropdown_dark_frame"
+        android:clickable="false"
+        android:onClick="addTwitterTerm"
+        android:text="@string/add2Watch"
+        android:textColor="#F8F8F8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/followStock2" />
+
+    <Button
+        android:id="@+id/button17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="99dp"
-        android:layout_marginLeft="99dp"
-        android:layout_marginTop="60dp"
-        android:cursorVisible="true"
-        android:ems="10"
-        android:hint="@string/search"
-        android:inputType="textPersonName"
-        android:importantForAutofill="no"
+        android:layout_marginTop="32dp"
+        android:onClick="backScreen"
+        android:text="Back to Home"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userInstruct" />
-
-    <!--Added this to keep some of Jacob's functionality-->
-
+        app:layout_constraintTop_toBottomOf="@+id/addToWatchlist2" />
 </android.support.constraint.ConstraintLayout>
