--- a/Heimdall/app/src/main/res/layout/activity_home.xml
+++ b/Heimdall/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,7 @@
     tools:context=".Home">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/RecScreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
